force-app/main/default/objects/DocumentAlyante__c/DocumentAlyante__c.object-meta.xml
<CustomObject>
    <label>Document</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>