force-app/main/default/objects/DocumentAlyante__c/fields/AmountPayed__c.field-meta.xml
<CustomField>
    <fullName>AmountPayed__c</fullName>
    <label>Amount Payed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>