force-app/main/default/objects/DocumentAlyante__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>ToBeEmitted</fullName>
                <label>To Be Emitted</label>
            </value>
            <value>
                <fullName>Emitted</fullName>
            </value>
            <value>
                <fullName>ToBePayed</fullName>
                <label>To Be Payed</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>PaidPartly</fullName>
                <label>Paid Partly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>