force-app/main/default/objects/DocumentAlyante__c/fields/TotalTaxable__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxable__c</fullName>
    <label>Total Taxable</label>
    <summarizedField>DocumentDetailAlyante__c.Amount__c</summarizedField>
    <summaryForeignKey>DocumentDetailAlyante__c.Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>