force-app/main/default/objects/DocumentAlyante__c/recordTypes/ActiveInvoice.recordType-meta.xml
<RecordType>
    <fullName>ActiveInvoice</fullName>
    <active>true</active>
    <label>Active Invoice</label>
</RecordType>