force-app/main/default/objects/DocumentAlyante__c/recordTypes/CreditNote.recordType-meta.xml
<RecordType>
    <fullName>CreditNote</fullName>
    <active>false</active>
    <label>Credit Note</label>
</RecordType>