force-app/main/default/objects/DocumentAlyante__c/recordTypes/PassiveInvoice.recordType-meta.xml
<RecordType>
    <fullName>PassiveInvoice</fullName>
    <active>false</active>
    <label>Passive Invoice</label>
</RecordType>