force-app/main/default/objects/DocumentAlyante__c/recordTypes/PreInvoice.recordType-meta.xml
<RecordType>
    <fullName>PreInvoice</fullName>
    <active>true</active>
    <label>Pre Invoice</label>
</RecordType>