force-app/main/default/objects/DocumentAlyante__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>DocumentNumber__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Date__c</columns>
    <columns>TotalTaxable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>